--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "devDependencies": {
     "@cybozu/eslint-config": "^18.0.2",
     "@webpack-cli/generators": "^3.0.1",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "eslint": "^8.36.0"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.20.2",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
