--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.20.2",
     "@cybozu/eslint-config": "^18.0.2",
     "@webpack-cli/generators": "^3.0.1",
     "babel-loader": "^9.1.2",
@@ -19,9 +21,8 @@
     "eslint": "^8.36.0"
   },
   "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.20.2",
     "express": "^4.18.2",
+    "kintone-ui-component": "^1.10.0",
     "nodemon": "^2.0.22"
   }
 }
